edit option and new fields for ai feature