@@ -1,12 +1,9 @@
 package io.nology.resources.temp;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
-import io.nology.resources.job.entity.Job;
-import io.nology.resources.temp.dto.JobDetails;
 import io.nology.resources.temp.dto.TempResponse;
 import io.nology.resources.temp.dto.TempResponseById;
 import io.nology.resources.temp.entity.Temp;
@@ -19,26 +16,34 @@ public class TempMapper {
                 temp.getId(),
                 temp.getFirstName(),
                 temp.getLastName(),
-                temp.getEmail());
+                temp.getEmail(),
+                temp.getCity(),
+                temp.getRating());
     }
 
     public TempResponseById toDetailResponse(Temp temp) {
+        List<String> skills = temp.getSkills().stream()
+                .map(s -> s.getName())
+                .toList();
 
-        List<JobDetails> jobs = temp.getJobs().stream().map(this::mapJob).collect(Collectors.toList());
+        List<TempResponseById.JobSummary> jobs = temp.getJobs().stream()
+                .map(j -> new TempResponseById.JobSummary(
+                        j.getId(),
+                        j.getName(),
+                        j.getStartDate().toString(),
+                        j.getEndDate().toString(),
+                        j.getStatus()))
+                .toList();
 
         return new TempResponseById(
                 temp.getId(),
                 temp.getFirstName(),
                 temp.getLastName(),
                 temp.getEmail(),
+                temp.getCity(),
+                temp.getNotes(),
+                temp.getRating(),
+                skills,
                 jobs);
-    }
-
-    private JobDetails mapJob(Job job) {
-        return new JobDetails(
-                job.getId(),
-                job.getName(),
-                job.getStartDate(),
-                job.getEndDate());
     }
 }
